<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_ndg_apps"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:textSize="21sp" />

    <Button
        android:id="@+id/btn_spotify_streamer"
        style="@style/main_button"
        android:onClick="showSpotifyStreamerApp"
        android:text="@string/spotify_streamer" />

    <Button
        android:id="@+id/btn_scores_app"
        style="@style/main_button"
        android:onClick="showScoresApp"
        android:text="@string/scores_app" />

    <Button
        android:id="@+id/btn_library_app"
        style="@style/main_button"
        android:onClick="showLibraryApp"
        android:text="@string/library_app" />

    <Button
        android:id="@+id/btn_built_it_bigger"
        style="@style/main_button"
        android:onClick="showBuiltItBiggerApp"
        android:text="@string/build_it_bigger" />

    <Button
        android:id="@+id/btn_xyz_reader"
        style="@style/main_button"
        android:onClick="showXyzReaderApp"
        android:text="@string/xyz_reader" />

    <Button
        android:id="@+id/btn_capstone"
        style="@style/main_button"
        android:onClick="showCapstoneApp"
        android:background="@color/capstone_red"
        android:text="@string/capstone" />


</LinearLayout>
